--- a/index.html
+++ b/index.html
@@ -4,14 +4,23 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="./lib/mui/css/mui.min.css">
+  <link rel="stylesheet" href="./lib/fontawesome/css/font-awesome.css">
+
  <link rel="stylesheet" href="./styles/index.css">
+
   <title>风的季节</title>
 </head>
 <body>
     <div class="layout">
-      <div class="pyg_header"></div>
+      <div class="pyg_header">
+          <div class="mui-input-row mui-search">
+            <input type="search" class="mui-input-clear" placeholder="">
+          </div>
+      </div>
       <div class="pyg_content"></div>
       <div class="pyg_footer"></div>
     </div>
 </body>
 </html>
+ <script src="./lib/mui/js/mui.js"></script>
