--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="./lib/mui/css/mui.min.css">
   <link rel="stylesheet" href="./lib/fontawesome/css/font-awesome.css">
-
   <link rel="stylesheet" href="./styles/index.css">
 
   <title>风的季节</title>
@@ -58,11 +57,11 @@
     <!--页脚  -->
     <div class="pyg_footer">
       <nav class="mui-bar mui-bar-tab">
-        <a class="mui-tab-item mui-active" href="#tabbar">
+        <a class="mui-tab-item mui-active" href="./index.html">
           <span class="mui-icon mui-icon-home"></span>
           <span class="mui-tab-label">首页</span>
         </a>
-        <a class="mui-tab-item" href="#tabbar-with-chat">
+        <a class="mui-tab-item" href="./views/category.html">
           <span class="mui-icon mui-icon-list"></span>
           <span class="mui-tab-label">分类</span>
         </a>
